--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -5,6 +5,9 @@ on:
     paths:
       - '**/*.tex'
 
+permissions:
+  contents: write
+
 jobs:
   compile_and_update:
     runs-on: ubuntu-latest
@@ -28,15 +31,17 @@ jobs:
       run: |
         for dir in */; do
           if [ -f "${dir}lecture.tex" ]; then
+            echo >> "${dir}metadata.txt"  # Add an empty line
             echo "Last compiled: $(date)" >> "${dir}metadata.txt"
+            echo "Revision by: ${{ github.event.head_commit.author.name }}" >> "${dir}metadata.txt"
             echo "Commit: ${{ github.sha }}" >> "${dir}metadata.txt"
           fi
         done
 
     - name: Commit and push changes
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
         git add .
         git commit -m "Compile LaTeX and update metadata" || echo "No changes to commit"
-        git push https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
+        git push
