--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -19,22 +19,32 @@ jobs:
     - name: Install LaTeX
       run: sudo apt-get install texlive-latex-extra
 
-    - name: Compile LaTeX documents
-      run: |
-        for dir in */; do
-          if [ -f "${dir}lecture.tex" ]; then
-            pdflatex -output-directory="$dir" "${dir}lecture.tex"
-          fi
-        done
+    - name: Get changed files
+      id: changed-files
+      uses: tj-actions/changed-files@v35
+      with:
+        files: |
+          **/*.tex
 
-    - name: Update metadata
+    - name: Compile changed LaTeX documents and update metadata
       run: |
-        for dir in */; do
-          if [ -f "${dir}lecture.tex" ]; then
-            echo >> "${dir}metadata.txt"  # Add an empty line
-            echo "Last compiled: $(date)" >> "${dir}metadata.txt"
-            echo "Revision by: ${{ github.event.head_commit.author.name }}" >> "${dir}metadata.txt"
-            echo "Commit: ${{ github.sha }}" >> "${dir}metadata.txt"
+        for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+          if [[ $file == *.tex ]]; then
+            dir=$(dirname "$file")
+            filename=$(basename "$file")
+            echo "Processing $file"
+            
+            # Compile LaTeX
+            pdflatex -output-directory="$dir" "$file"
+            
+            # Update metadata
+            echo >> $dir/metadata.txt" 
+            echo "Last compiled: $(date)" >> "$dir/metadata.txt"
+            echo "Revision by: ${{ github.event.head_commit.author.name }}" >> "$dir/metadata.txt"
+            echo "Commit: ${{ github.sha }}" >> "$dir/metadata.txt"
+            
+            # Add changes to git
+            git add "$dir/${filename%.tex}.pdf" "$dir/metadata.txt"
           fi
         done
 
@@ -43,5 +53,5 @@ jobs:
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add .
-        git commit -m "Compile LaTeX and update metadata" || echo "No changes to commit"
+        git commit -m "Compile LaTeX and update metadata" || echo "No note changes to commit"
         git push
