--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -38,7 +38,7 @@ jobs:
             pdflatex -output-directory="$dir" "$file"
             
             # Update metadata
-            echo >> $dir/metadata.txt" 
+            echo >> "$dir/metadata.txt" 
             echo "Last compiled: $(date)" >> "$dir/metadata.txt"
             echo "Revision by: ${{ github.event.head_commit.author.name }}" >> "$dir/metadata.txt"
             echo "Commit: ${{ github.sha }}" >> "$dir/metadata.txt"
